fix mobile riservato a schermi extra-small e non small

--- a/assets/css/quizzipedia.base.css
+++ b/assets/css/quizzipedia.base.css
@@ -1027,6 +1027,9 @@ ul.alert-dropdown {
         background-color: white;
         border-top:0 none;
     }
+}
+
+@media(max-width:400px){
 	.list1-width-fix{
 		margin-left:-10px;
 	}
